data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_545.wast
;; 6. **Test Description**:    - Place `nop` instructions at every possible position inside a function and at the beginning and end of the function. Check for differences in context initialization.    - **Constraint Checked**: Guarantees that `nop` instructions neither alter the execution flow nor the context preconditions.    - **Relation to CFG**: Ensures the initial and final CFG states remain unaffected by `nop`.

(assert_malformed
  (module
    (func $start (nop) (nop) (nop)
      (drop (i32.const 1)) (nop)
      (if (i32.const 1) (then (nop) (nop)) (else (nop)))
      (nop)
      (loop (nop) (nop) (br 0) (nop))
    )
  )
  "no malformed instructions"
)